@@ -1,5 +1,7 @@
 package org.example.service;
 
+import org.example.controller.request.UserRequest;
+import org.example.controller.response.UserResponse;
 import org.example.entity.Admin;
 import org.example.entity.User;
 import org.example.repository.UserRepository;
@@ -13,8 +15,8 @@ import java.util.stream.Collectors;
 public class UserService {
 @Autowired
     UserRepository userRepository;
-    public List<User> getAllUser() {
-        return userRepository.findAll().stream().collect(Collectors.toList());
+    public List<UserResponse> getAllUser() {
+        return userRepository.findAll().stream().map(UserResponse::new).toList();
     }
     public List<User> findUserByName(String name) {
         return userRepository.findAll().stream().filter(user -> user.userName.replaceAll(" ","").equals(name)).collect(Collectors.toList());
@@ -28,14 +30,15 @@ public class UserService {
             return "User not found";
         }
     }
-    public User createUser(User user){
-        return  userRepository.save(user);
+    public UserResponse createUser(UserRequest userRequest){
+        User user= new User(null, userRequest.userName, userRequest.getEmail(),userRequest.getTell());
+        return  new UserResponse(userRepository.save(user));
     }
-    public User updateUser(int id, User user){
+    public User updateUser(int id, UserRequest userRequest){
         User existingUser = userRepository.findById(id).get();
-        existingUser.setUserName(user.getUserName());
-        existingUser.setEmail(user.getEmail());
-        existingUser.setTell(user.getTell());
+        existingUser.setUserName(userRequest.getUserName());
+        existingUser.setEmail(userRequest.getEmail());
+        existingUser.setTell(userRequest.getTell());
         return userRepository.save(existingUser);
     }
 
